2013-11-13  Murray Stokely  <murray@FreeBSD.org>

	* R/extensions.R: Give a user friendly error message if someone tries
	  to set an extension to a message of the wrong type instead of
	  causing a C++ check failure that terminates your R session.
	* inst/unitTests/runit.extensions.R (test.extension): Add test.

2013-10-23  Murray Stokely  <murray@FreeBSD.org>

	* src/lookup.cpp (rprotobuf): Remove stop() error in object table
	  assignment as this was causing errors with the '<<-' operator in
	  any code using RProtoBuf.
	* inst/unitTests/runit.import.R (test.assign.in.global): Add a
	  test for the above.

2013-09-16  Murray Stokely  <murray@FreeBSD.org>

	* DESCRIPTION (Version): Increment to 0.3.1.1.
	* R/00classes.R: Improve show method for EnumValueDescriptor and
	  add enum_type to '$' dispatch.
	* man/EnumValueDescriptor-class.Rd: Add examples and document
	  missing methods.
	* src/wrapper_EnumValueDescriptor.cpp (rprotobuf): Add missing
	  enum_type method.
	* inst/unitTests/runit.enums.R (test.enums): Add more tests.

2013-09-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Release 0.3.1

2013-09-13  Murray Stokely  <murray@FreeBSD.org>

	* vignettes/Makefile.in: Update configure to output R_HOME to the
	  vignette makefile so we can avoid the use of a non-portable GNU
	  makefile extension here.

2013-09-12  Murray Stokely  <murray@FreeBSD.org>

	* src/RcppMacros.h: Add Rcpp compatibility macros
	  which are simplified versions of the now deprecated ones from
	  Rcpp.

2013-09-11  Murray Stokely  <mstokely@FreeBSD.org>

	* configure.in: If pkg-config is not available add -lprotobuf to
	  PKG_LIBS.  This makes it easier to install on MacOS X 10.8, for
	  example.

2013-09-06  Murray Stokely  <murray@FreeBSD.org>

	* src/rprotobuf.cpp (rprotobuf): Include the name of the field
	  that could not be found in exceptions in getFieldDescriptor
	  (errors from update / new, etc.).

2013-09-03  Murray Stokely  <murray@FreeBSD.org>
